<resources>
    <string name="app_name">Organizer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Organizer</string>
    <string name="nav_header_subtitle">Organize your activities</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_money">Money Manager</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Account_label">Accounts</string>
    <string name="transaction_plan">Transaction Plans</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="database">Database</string>
    <string name="scheduler">Scheduler</string>
    <string name="database_backup">Database Backup</string>
    <string name="categories">Categories</string>
    <string name="transactions">Transactions</string>
    <string name="amount">Amount</string>
    <string name="from_account">From Account</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="comments">Comments</string>
    <string name="revert">Revert</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="group">Group</string>
    <string name="name">Name</string>
    <string name="date_range">Date Range</string>
    <string name="account_summary">Account Summary</string>
    <string name="category_summary">Category Summary</string>
    <string name="debt_summary">Debt Summary</string>
    <string name="category_group">Category Group</string>
    <string name="clone">Clone</string>
    <string name="label">Label</string>
    <string name="value">Value</string>
    <string name="navigate">Navigate</string>
    <string name="deep">Navigate Deep</string>
    <string name="to_list">Navigate to List</string>
    <string name="save">Save</string>
    <string name="chart_name">Chart Name</string>
    <string name="last_transaction_id_processed">Last Transaction Id processed</string>
    <string name="show_count_by">Show Count By</string>
    <string name="add_point">Add Point</string>
    <string name="from_transaction_id">From Transaction Id</string>
    <string name="to_transaction_id">To Transaction Id</string>
    <string name="extra_point">Extra Point covering latest available Transaction</string>
    <string name="label_for_the_extra_point">Label For The Extra Point</string>
    <string name="forbidden_time_3_message">Asr prayer can be said if you have missed it.</string>
    <string name="tahajjud_message">Tahajjud prayer is an optional/supererogatory prayer performed during the night after waking up from sleep</string>
    <string name="start_at">Start at</string>
    <string name="end_at">End at</string>
    <string name="end_col">End :</string>
    <string name="ongoing">Ongoing</string>
    <string name="up_next">Up Next</string>
    <string name="sahari_end">Sahari End</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="forbidden_time_1">Forbidden Time</string>
    <string name="ishraq">Ishraq</string>
    <string name="forbidden_time_2">Forbidden Time</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="forbidden_time_3">Forbidden Time</string>
    <string name="sunset">Sunset</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="isha_previous_day">Isha (Yesterday)</string>
    <string name="tahajjud">Tahajjud</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="show_salat_alerts">Show Salat Alerts</string>
    <string name="show_alert_for_fajr">Show Alert for Fajr</string>
    <string name="show_alert_for_dhuhr">Show Alert for Dhuhr</string>
    <string name="show_alert_for_asr">Show Alert for Asr</string>
    <string name="show_alert_for_maghrib">Show Alert for Maghrib</string>
    <string name="show_alert_for_isha">Show Alert for Isha</string>
    <string name="minutes_before_end"> (+) minutes after start/ (-) minutes before end</string>
    <string name="minutes_before_waqt_end"> minute/s before salat time ends</string>
    <string name="minutes_after_waqt_start"> minute/s after salat time starts</string>
</resources>