<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/MainMenu" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_money"
            android:icon="@drawable/ic_attach_money_green_24dp"
            android:title="@string/menu_money" />
        <item
            android:id="@+id/nav_prayer"
            android:icon="@drawable/ic_mosque__1_"
            android:title="Prayer" />
    </group>
    <item android:id="@+id/backupMenu" android:title="System">
        <menu>
            <item
            android:id="@+id/nav_database_backup"
            android:icon="@drawable/ic_baseline_storage_24"
            android:iconTint="@color/TransferColor"
            android:title="@string/database"
            />
            <item
            android:id="@+id/nav_scheduler"
            android:icon="@drawable/ic_baseline_schedule_24"
            android:iconTint="@color/OrangeBCWhiteTC"
            android:title="@string/scheduler"
            />
        </menu>
    </item>
</menu>
