<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.money.viewTransaction.TransactionDetailsFragment"
    android:padding="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/transaction_type"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/BlackText"
            />
        <TextView
            android:id="@+id/transactionTypeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/BlackText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amount"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/BlackText"
            />
        <TextView
            android:id="@+id/amountText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/BlackText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/revert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/revert"
            android:backgroundTint="@color/ExpenseColor"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/from_account_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="12">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/account"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/BlackText"
                />
            <TextView
                android:id="@+id/from_account_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/BlackText"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="12">
            <TextView
                android:id="@+id/from_account_old"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/ic_baseline_arrow_right_alt_24"
                app:tint="@color/ExpenseColor"
                />
            <TextView
                android:id="@+id/from_account_new"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/to_account_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="12">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/account"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/BlackText"
                />
            <TextView
                android:id="@+id/to_account_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/BlackText"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="12">
            <TextView
                android:id="@+id/to_account_old"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/ic_baseline_arrow_right_alt_24"
                app:tint="@color/IncomeColor"
                />
            <TextView
                android:id="@+id/to_account_new"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/category_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/category"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/BlackText"
            />
        <TextView
            android:id="@+id/category_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/BlackText"
            />
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/BlackText"
        />
    <TextView
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>